licencing documentation and template, make cali updates
Former-commit-id: 6609b930f51aabe1e041d6c9035b1375fbe9e168

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -662,6 +662,9 @@ body .dc-chart g.row text {
     }
 }
 
+.none_here {
+    display: none;
+}
 
 .dc-data-table {
 
@@ -683,7 +686,7 @@ body .dc-chart g.row text {
         div {
             height: 16px;
             /* jupyter.png, planet.png, notes.png */
-            background-image: url(../img/planet.png);
+            background-image: url(../img/planet.gif);
             background-size: 100% 100%;
         }
     }
