--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -454,6 +454,9 @@ body .dc-chart g.row text {
       background-image: url(../img/check.png);
       background-size: 100% 100%; }
 
+.none_here {
+  display: none; }
+
 .dc-data-table .walltime {
   position: static; }
   .dc-data-table .walltime div {
@@ -466,7 +469,7 @@ body .dc-chart g.row text {
   .dc-data-table .jupyter.icon div {
     height: 16px;
     /* jupyter.png, planet.png, notes.png */
-    background-image: url(../img/planet.png);
+    background-image: url(../img/planet.gif);
     background-size: 100% 100%; }
 
 .dc-data-table th {
