--- a/style/dc.scss
+++ b/style/dc.scss
@@ -569,6 +569,12 @@ body .dc-chart g.row text {
         }
     }
 
+    .reset_all {
+        color: #0c7cd5;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+
     .contain_show_more {
 
         text-align: center;
