make it so that the compare area can tke up the entire bottom section so that it will maximize real estate.  had to move around a bunch of divs and stuff to make it right
Former-commit-id: 4bb2995465c72e882f73f9597f779c6f3ee821a9

--- a/dc.css
+++ b/dc.css
@@ -575,5 +575,6 @@ body .dc-chart g.row text {
       top: 4px; }
     .bottom_table .bottom_tab_outer .active {
       border-bottom: 4px solid white; }
-  .bottom_table #compare_bottom_outer {
-    min-height: 500px; }
+
+#compare_bottom_outer {
+  min-height: 500px; }
