--- a/style/dc.css
+++ b/style/dc.css
@@ -569,7 +569,8 @@ body .dc-chart g.row text {
       top: 4px; }
     .bottom_table .bottom_tab_outer .active {
       border-bottom: 4px solid white; }
-  .bottom_table #compare_bottom_outer {
-    min-height: 500px; }
+
+#compare_bottom_outer {
+  min-height: 500px; }
 
 /*# sourceMappingURL=dc.css.map */
