some styling stuff
Former-commit-id: e7d5ad9e46ebdff903c6440afd45b318279ee7e1

--- a/style/dc.css
+++ b/style/dc.css
@@ -571,6 +571,8 @@ body .dc-chart g.row text {
       border-bottom: 4px solid white; }
 
 #compare_bottom_outer {
-  min-height: 500px; }
+  min-height: 500px;
+  background-color: #f2f2f2;
+  display: none; }
 
 /*# sourceMappingURL=dc.css.map */
