--- a/style/dc.scss
+++ b/style/dc.scss
@@ -838,4 +838,6 @@ body .dc-chart g.row text {
 
 #compare_bottom_outer {
     min-height: 500px;
+    background-color: #f2f2f2;
+    display: none;
 }
