--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -577,4 +577,6 @@ body .dc-chart g.row text {
       border-bottom: 4px solid white; }
 
 #compare_bottom_outer {
-  min-height: 500px; }
+  min-height: 500px;
+  background-color: #f2f2f2;
+  display: none; }
