--- a/style/dc.scss
+++ b/style/dc.scss
@@ -841,3 +841,6 @@ body .dc-chart g.row text {
     background-color: #f2f2f2;
     display: none;
 }
+
+.bg-color-255-255-255-0, #compare-window {
+}
