make tabs appear correctly on page load.
Former-commit-id: 661f5d5adf370eb74bd0e76edf3d783ca51bfe97

--- a/style/dc.css
+++ b/style/dc.css
@@ -575,4 +575,7 @@ body .dc-chart g.row text {
   background-color: #f2f2f2;
   display: none; }
 
+body .bg-color-255-255-255-0 {
+  display: none; }
+
 /*# sourceMappingURL=dc.css.map */
