--- a/style/dc.scss
+++ b/style/dc.scss
@@ -842,5 +842,6 @@ body .dc-chart g.row text {
     display: none;
 }
 
-.bg-color-255-255-255-0, #compare-window {
+body .bg-color-255-255-255-0 {
+    display: none;
 }
