--- a/dc.css
+++ b/dc.css
@@ -580,3 +580,6 @@ body .dc-chart g.row text {
   min-height: 500px;
   background-color: #f2f2f2;
   display: none; }
+
+body .bg-color-255-255-255-0 {
+  display: none; }
