--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -576,6 +576,13 @@ body .dc-chart g.row text {
     .bottom_table .bottom_tab_outer .active {
       border-bottom: 4px solid white; }
 
+#compare-window select {
+  height: 40px;
+  padding: 0;
+  position: relative;
+  top: 4px;
+  left: 2px; }
+
 #compare_bottom_outer {
   min-height: 500px;
   background-color: #f2f2f2;
