multi jupyter button plus cali_key extraction. and bind the multijupyter button
Former-commit-id: b9043bf48eddcb9c69a0e1b12a486442ae8c7513

--- a/style/dc.css
+++ b/style/dc.css
@@ -550,8 +550,13 @@ body .dc-chart g.row text {
   .bottom_table .hidden {
     display: none; }
   .bottom_table .bottom_tab_outer {
+    position: relative;
     border-bottom: 1px solid #bbb;
     margin: 100px 0 5px 0; }
+    .bottom_table .bottom_tab_outer .multi_jupyter {
+      position: absolute;
+      bottom: 5px;
+      top: auto; }
     .bottom_table .bottom_tab_outer .table-tab, .bottom_table .bottom_tab_outer .compare-tab {
       padding: 4px;
       border: 1px solid #999;
