--- a/style/dc.scss
+++ b/style/dc.scss
@@ -666,6 +666,28 @@ body .dc-chart g.row text {
             background-size: 100% 100%;
         }
     }
+
+}
+
+.multi_jupyter.icon {
+
+    position: static;
+    padding: 12px 11px 12px 11px;
+
+    div.inner {
+        height: 35px;
+        width: 35px;
+        /*background-image: url(../img/multi_jupyter.png);*/
+        background-image: url(../img/planet.gif);
+        background-size: 100% 100%;
+    }
+
+    .tiny_letter {
+        font-size: 13px;
+        position: absolute;
+        right: 5px;
+        top: -1px;
+    }
 }
 
 .none_here {
