--- a/style/dc.scss
+++ b/style/dc.scss
@@ -882,3 +882,91 @@ body .dc-chart g.row text {
 body .bg-color-255-255-255-0 {
     display: none;
 }
+
+.curtain {
+	width: 100%;
+	height: 100%;
+	background-color: #cccccc;
+	opacity: 0.65;
+	position:absolute;
+	left: 0;
+	top: 0;
+	z-index: 15;
+}
+
+.modal {
+	margin: auto auto;
+	background-color: white;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -60%);
+	border: 1px solid #000000;
+	-webkit-box-shadow: 3px 3px 3px #333333;
+	z-index: 16;
+}
+
+.modal .body {
+	padding: 30px;
+	min-width: 400px;
+	min-height: 200px;
+}
+
+.modal .close {
+	position: absolute;
+	top: 1px;
+	right: 4px;
+}
+
+.modal .close.black_button .inner_button {
+	padding: 4px 4px 4px 7px;
+	width: 16px;
+	font-size: 14px;
+}
+
+.outer_modal {
+	width: 100%;
+	height: 100%;
+	text-align: left;
+}
+
+.modal .button_bottom {
+	position: absolute;
+	bottom: 15px;
+	text-align: center;
+	width: 345px;
+	font-family: tahoma;
+}
+
+.header {
+	border-bottom: 1px solid #333;
+	background: #444 url(../img/ui-bg_highlight-soft_44_444444_1x100.png) 50% 50% repeat-x;
+	color: #fff;
+	font-weight: bold;
+	padding: 11px;
+	font-family: Tahoma;
+	font-size: 13px;
+	letter-spacing: 1pt;
+	-webkit-text-shadow: -1px -1px 0 #000000;
+	-moz-text-shadow: -1px -1px 0 #000000;
+	text-shadow: -1px -1px 0 #000000;
+	position: relative;
+}
+.header    .plus_sign {
+	width: 19px;
+	height: 19px;
+	position: absolute;
+	top: 7px;
+	right: 7px;
+	-webkit-filter: grayscale(1) invert(1);
+	filter: grayscale(1) invert(1);
+	background: url(../img/edit_pencil.png);
+	background-size: 100% 100%;
+	cursor: pointer;
+}
+
+.header .plus_sign {
+	background: url(../img/plus.png);
+	background-size: 100% 100%;
+	right: 8px;
+}
