--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -12,7 +12,7 @@ Plot Type:
 
     <tr>
         <td>
-
+        X-axis
         </td>
         <td>
         </td>
@@ -20,7 +20,7 @@ Plot Type:
 
     <tr>
         <td>
-
+        Y-axis
         </td>
         <td>
         </td>
@@ -28,7 +28,7 @@ Plot Type:
 
     <tr>
         <td>
-
+        Chart Name
         </td>
         <td>
             <input type="text"/>
