add CSS for plus button, plus the plus image and the event handler for the plus button and the event handling function to be called
Former-commit-id: e56fe1f87eee39be155b0045064bc74b982271b1

--- a/dc.css
+++ b/dc.css
@@ -452,6 +452,11 @@ body .dc-chart g.row text {
   .container .help_icon div {
     background-image: url(../img/info.png);
     background-size: 100% 100%; }
+  .container .plus_icon {
+    right: 95px; }
+    .container .plus_icon div {
+      background-image: url(../img/plus.png);
+      background-size: 100% 100%; }
   .container .user_pref_icon {
     right: 50px; }
     .container .user_pref_icon div {
