extract the dimensions and normalize them and add them up in a data structure to construct the options lists from which we construct the select drop down
Former-commit-id: b3ab785473a42e6df5ca72f4ff6be7c39404c186

--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -14,7 +14,7 @@ Plot Type:
         <td>
         X-axis
         </td>
-        <td>
+        <td class="xaxis">
         </td>
     </tr>
 
@@ -22,7 +22,7 @@ Plot Type:
         <td>
         Y-axis
         </td>
-        <td>
+        <td class="yaxis">
         </td>
     </tr>
 
