--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -2,7 +2,7 @@ Plot Type:
 <table>
     <tr>
         <td>
-            <select>
+            <select class="pick_chart_type">
                 <option>Scatter</option>
             </select>
         </td>
@@ -12,7 +12,7 @@ Plot Type:
 
     <tr>
         <td>
-        X-axis
+            X-axis
         </td>
         <td class="xaxis">
         </td>
@@ -20,7 +20,7 @@ Plot Type:
 
     <tr>
         <td>
-        Y-axis
+            Y-axis
         </td>
         <td class="yaxis">
         </td>
@@ -28,7 +28,7 @@ Plot Type:
 
     <tr>
         <td>
-        Chart Name
+            Chart Name
         </td>
         <td>
             <input type="text"/>
@@ -36,3 +36,9 @@ Plot Type:
     </tr>
 
 </table>
+
+<div class="center">
+    <div class="icon myButton submit">
+        <div class="inner">SUBMIT</div>
+    </div>
+</div>
