--- a/style/dc.scss
+++ b/style/dc.scss
@@ -678,6 +678,18 @@ body .dc-chart g.row text {
 
 }
 
+.composite_chart_type {
+
+    .pick_chart_type {
+        margin: 0 0 25px 0;
+    }
+
+    .center {
+        margin: 15px 0 0 0;
+        text-align: center;
+    }
+}
+
 .multi_jupyter.icon {
 
     position: static;
