initial draft of scatter chart set up.
Former-commit-id: 14dba5427115edb19cab289b167d775f8fa28658

--- a/dc.css
+++ b/dc.css
@@ -463,11 +463,24 @@ body .dc-chart g.row text {
       background-image: url(../img/check.png);
       background-size: 100% 100%; }
 
-.composite_chart_type .pick_chart_type {
-  margin: 0 0 25px 0; }
+.composite_chart_type table {
+  width: 100%; }
+
+.composite_chart_type select {
+  height: 36px; }
+
+.composite_chart_type tr:first-child td {
+  padding: 0 0 17px 0;
+  border-bottom: 1px solid #bbbbbb; }
+
+.composite_chart_type tr:nth-child(2) td {
+  padding: 26px 0 0 0; }
+
+.composite_chart_type .chart_name {
+  padding: 5px; }
 
 .composite_chart_type .center {
-  margin: 15px 0 0 0;
+  margin: 22px 0 7px 0;
   text-align: center; }
 
 .multi_jupyter.icon {
