--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -1,13 +1,15 @@
-Plot Type:
 <table>
     <tr>
+        <td>
+            Plot Type
+        </td>
+
         <td>
             <select class="pick_chart_type">
                 <option>Scatter</option>
             </select>
-        </td>
 
-        <td></td>
+        </td>
     </tr>
 
     <tr>
@@ -31,7 +33,7 @@ Plot Type:
             Chart Name
         </td>
         <td>
-            <input type="text"/>
+            <input type="text" class="chart_name"/>
         </td>
     </tr>
 
