--- a/style/dc.scss
+++ b/style/dc.scss
@@ -680,12 +680,29 @@ body .dc-chart g.row text {
 
 .composite_chart_type {
 
-    .pick_chart_type {
-        margin: 0 0 25px 0;
+    table {
+        width: 100%;
+    }
+
+    select {
+        height: 36px;
+    }
+
+    tr:first-child td {
+        padding: 0 0 17px 0;
+        border-bottom: 1px solid #bbbbbb;
+    }
+
+    tr:nth-child(2) td {
+        padding: 26px 0 0 0;
+    }
+
+    .chart_name {
+        padding: 5px;
     }
 
     .center {
-        margin: 15px 0 0 0;
+        margin: 22px 0 7px 0;
         text-align: center;
     }
 }
