scatter chart x-label and y-labels
Former-commit-id: 67e9c8df37b0932224ba8920f82e2d1bf4fd9476

--- a/dc.css
+++ b/dc.css
@@ -46,6 +46,9 @@ div.horizontal-bar-chart {
     .outer_holder .the_bar g.axis {
       transform: translate(0, 345px); }
 
+.scatter-chart.dc-chart .x-label {
+  bottom: 25px; }
+
 .dc-chart {
   position: relative; }
   .dc-chart .top_left {
