Edit chart type pop up and bindings plus optional delete button show or hide and submit
Former-commit-id: 28a03309ecce7a75a7e47f192222196b2641a015

--- a/style/dc.css
+++ b/style/dc.css
@@ -485,6 +485,14 @@ body .dc-chart g.row text {
       background-image: url(../img/check.png);
       background-size: 100% 100%; }
 
+.composite_chart_type.edit_mode .myButton.submit {
+  display: inline-block; }
+.composite_chart_type.edit_mode .myButton.delete {
+  display: inline-block; }
+.composite_chart_type.add_mode .myButton.submit {
+  display: inline-block; }
+.composite_chart_type.add_mode .myButton.delete {
+  display: none; }
 .composite_chart_type table {
   width: 100%; }
 .composite_chart_type select {
