--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -43,4 +43,8 @@
     <div class="icon myButton submit">
         <div class="inner">SUBMIT</div>
     </div>
+
+    <div class="icon myButton delete">
+        <div class="inner">DELETE</div>
+    </div>
 </div>
