be able to edit and replace and remove by dimension and update the FE with the new view
Former-commit-id: 96a36d36d4e6d9faa002d3bdb4d52e57fe165be2

--- a/dc.css
+++ b/dc.css
@@ -511,7 +511,8 @@ body .dc-chart g.row text {
   padding: 26px 0 0 0; }
 
 .composite_chart_type .chart_name {
-  padding: 5px; }
+  padding: 5px;
+  margin: 10px 0 0 0; }
 
 .composite_chart_type .center {
   margin: 22px 0 7px 0;
