--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -12,7 +12,7 @@
         </td>
     </tr>
 
-    <tr>
+    <tr class="axis_row">
         <td>
             X-axis
         </td>
@@ -20,7 +20,7 @@
         </td>
     </tr>
 
-    <tr>
+    <tr class="axis_row">
         <td>
             Y-axis
         </td>
