--- a/style/dc.css
+++ b/style/dc.css
@@ -503,7 +503,8 @@ body .dc-chart g.row text {
 .composite_chart_type tr:nth-child(2) td {
   padding: 26px 0 0 0; }
 .composite_chart_type .chart_name {
-  padding: 5px; }
+  padding: 5px;
+  margin: 10px 0 0 0; }
 .composite_chart_type .center {
   margin: 22px 0 7px 0;
   text-align: center; }
