main implementation of tooltips on horizontal bar charts with hover over and mouse out and mouse in events, set up
Former-commit-id: 084756fe67a6c6a81f16e0010fccbf6ba22acff7

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -29,6 +29,16 @@ $font_sans_serif: sans-serif;
     stroke-opacity: 0.5;
 }
 
+#tooltip {
+    position: absolute;
+    display: none;
+    background: cornsilk;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+    z-index: 4000;
+}
+
 .chart_container .dc-chart {
     height: 440px;
 }
