--- a/dc.css
+++ b/dc.css
@@ -2,6 +2,15 @@
   fill-opacity: 0.5;
   stroke-opacity: 0.5; }
 
+#tooltip {
+  position: absolute;
+  display: none;
+  background: cornsilk;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  z-index: 4000; }
+
 .chart_container .dc-chart {
   height: 440px; }
 
