add feature which allows you to disable the addChart feature
Former-commit-id: 12e402f0026904e38b9356485ac9ccb2e51e0191

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -106,6 +106,13 @@ div.horizontal-bar-chart {
     }
 }
 
+.turn_off_add_chart_feature {
+    div.popup_menu,
+    div.plus_icon {
+        display: none;
+    }
+}
+
 .scatter-chart.dc-chart {
     .x-label {
         bottom: 18px;
