--- a/style/dc.css
+++ b/style/dc.css
@@ -55,6 +55,10 @@ div.horizontal-bar-chart {
     .outer_holder .the_bar g.axis {
       transform: translate(0, 345px); }
 
+.turn_off_add_chart_feature div.popup_menu,
+.turn_off_add_chart_feature div.plus_icon {
+  display: none; }
+
 .scatter-chart.dc-chart .x-label {
   bottom: 18px; }
 
