adjust postioning of the triple bar, so its not overlapping
Former-commit-id: 3694601ce2bd517a776cffff051582f3cfcf43aa

--- a/dc.css
+++ b/dc.css
@@ -64,6 +64,8 @@ div.horizontal-bar-chart {
 
 .dc-chart {
   position: relative; }
+  .dc-chart.horizontal-bar-chart .popup_menu {
+    top: -9px; }
   .dc-chart .popup_menu {
     position: absolute;
     top: 20px;
