Ensure that all chart names can be changed and persisted correctly and load  modal for changing that name loads based on current name.
Former-commit-id: dc142abb6624050ed2216ed0e500dac40de71824

--- a/dc.css
+++ b/dc.css
@@ -40,7 +40,7 @@ div.horizontal-bar-chart {
     z-index: 100;
     background-color: white;
     padding: 0 5px 0 0; }
-  .outer_holder .options_title {
+  .outer_holder .text_chart_name {
     position: absolute;
     left: 10px;
     top: 33px; }
