--- a/style/dc.scss
+++ b/style/dc.scss
@@ -78,11 +78,12 @@ div.horizontal-bar-chart {
         padding: 0 5px 0 0;
     }
 
-    .options_title {
+    .text_chart_name {
         position: absolute;
         left: 10px;
         top: 33px;
     }
+
 
     .horizontal-bar-chart {
 
