--- a/compare.css
+++ b/compare.css
@@ -1,15 +1,15 @@
-*[data-v-c5c306] {
+*[data-v-6cd63b] {
   margin: 0px;
   box-sizing: border-box;
-}select[data-v-bed92e] {
+}select[data-v-ff3891] {
   margin-right: 10px;
 }
-*[data-v-bed92e] {
+*[data-v-ff3891] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
   margin: 0px;
   box-sizing: border-box;
-}*[data-v-69651d] {
+}*[data-v-ac686f] {
   box-sizing: border-box;
   margin: 0px;
 }
