--- a/compare.css
+++ b/compare.css
@@ -1,15 +1,1 @@
-*[data-v-6cd63b] {
-  margin: 0px;
-  box-sizing: border-box;
-}select[data-v-ff3891] {
-  margin-right: 10px;
-}
-*[data-v-ff3891] {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 8pt;
-  margin: 0px;
-  box-sizing: border-box;
-}*[data-v-ac686f] {
-  box-sizing: border-box;
-  margin: 0px;
-}
+*[data-v-6cd63b]{margin:0;box-sizing:border-box}select[data-v-ff3891]{margin-right:10px}*[data-v-ff3891]{font-family:Verdana,Geneva,Tahoma,sans-serif;font-size:8pt;margin:0;box-sizing:border-box}*[data-v-ac686f]{box-sizing:border-box;margin:0}
