fix multijupyter for container
Former-commit-id: 08de1868d49357f057b652d6112051f394edfa5b

--- a/compare.css
+++ b/compare.css
@@ -1,15 +1,15 @@
-*[data-v-6cd63b] {
+*[data-v-1628ce] {
   margin: 0px;
   box-sizing: border-box;
-}select[data-v-ff3891] {
+}select[data-v-b21277] {
   margin-right: 10px;
 }
-*[data-v-ff3891] {
+*[data-v-b21277] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 8pt;
   margin: 0px;
   box-sizing: border-box;
-}*[data-v-ac686f] {
+}*[data-v-a386b6] {
   box-sizing: border-box;
   margin: 0px;
 }
