reposition multi jupyter icon so that its not too far to the right
Former-commit-id: 98eaa430ad366d97e10d10adfce57010c05c1460

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -687,6 +687,10 @@ body .dc-chart g.row text {
         cursor: pointer;
     }
 
+    div.multi_jupyter {
+        right: auto;
+        left: 1255px;
+    }
     .icon {
         padding: 8px 7px 8px 8px;
         display: inline-block;
