--- a/style/dc.css
+++ b/style/dc.css
@@ -471,6 +471,9 @@ body .dc-chart g.row text {
       zoom: 1.5; }
   .container a {
     cursor: pointer; }
+  .container div.multi_jupyter {
+    right: auto;
+    left: 1255px; }
   .container .icon {
     padding: 8px 7px 8px 8px;
     display: inline-block;
