refactor hamburger menu, fix bug on windows where the burger menu was misshapen.
Former-commit-id: 2bd915065f181ce4a085001feb1805c652f340e3

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -132,11 +132,18 @@ div.horizontal-bar-chart {
         position: absolute;
         top: 20px;
         right: 40px;
-        color: black;
-        font-size: 22px;
-        border-bottom: 2px solid black;
         cursor: pointer;
         width: 12px;
+
+        .bar {
+            width: 22px;
+            height: 3px;
+            background-color: #444444;
+            margin: 4px 0;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+        }
     }
 
     .top_left {
