Refactor the switching display between the various chart types.  this will allow us to add and edit without problems with multiple different chart types
Former-commit-id: b4a075811264e06a90f21d174e108170a706a248

--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -5,7 +5,8 @@
         </td>
 
         <td>
-            <select class="pick_chart_type">
+            <select class="pick_chart_type_sel">
+                <option>Multi</option>
                 <option>Scatter</option>
             </select>
 
