Initial implementation of Multi charts: including the ability to go from scatter chart to multi chart, and the initial jquery plugin implementation of MultiRowSelector with an Add row button.
Former-commit-id: 36a3dc80ee406b16cb9d2181b50b023a3560cf3f

--- a/web/Templates/PlotType.html
+++ b/web/Templates/PlotType.html
@@ -40,6 +40,8 @@
 
 </table>
 
+<div class="multi_row_selector"></div>
+
 <div class="center">
     <div class="icon myButton submit">
         <div class="inner">SUBMIT</div>
