--- a/dc.css
+++ b/dc.css
@@ -511,10 +511,10 @@ body .dc-chart g.row text {
 .composite_chart_type .multi_row_selector {
   padding: 20px 0 0 0; }
   .composite_chart_type .multi_row_selector table {
-    margin: 8px 0 0 0;
-    padding: 8px 0 0 0; }
+    margin: 1px 0 0 0; }
   .composite_chart_type .multi_row_selector tr:first-child td {
-    border-top: 1px solid #bbbbbb; }
+    border-top: 1px solid #bbbbbb;
+    padding: 12px 3px 3px 3px; }
 
 .composite_chart_type.edit_mode .myButton.submit {
   display: inline-block; }
