--- a/memory/css/memory.css
+++ b/memory/css/memory.css
@@ -1,3 +1,18 @@
 .error_statement {
 	display: none;
 }
+
+.plus.myButton {
+	position: absolute;
+    top: 5px;
+    right: 60px;
+    z-index: 10;
+    font-size: 30px;
+    width: 22px;
+    padding: 4px;
+    text-align: center;
+}
+
+.top_bar {
+	height: 30px;
+}
