fix issue where clicking out does not get an event function due to it being outside of the body and html height
Former-commit-id: aa6483fe99027e8ed01d5ceae9a3076a18dafcb8

--- a/memory/css/memory.css
+++ b/memory/css/memory.css
@@ -16,3 +16,9 @@
 .top_bar {
 	height: 30px;
 }
+
+/* make body 100% to ensure when you click on white area it's in the body */
+html,
+body {
+	height:100%;
+}
