fix windowing issue and the autoclose of the panel whenever you click a checkbox.  it should not close when clicking on a checkbox
Former-commit-id: bf96c4b2051f170a65c7cb0b94851f53afbb2f88

--- a/memory/css/memory.css
+++ b/memory/css/memory.css
@@ -22,3 +22,22 @@ html,
 body {
 	height:100%;
 }
+
+.ch_dropdown {
+	position: relative;
+}
+
+.checkbox_open_close {
+	position: absolute;
+	left: 10px;
+	top: 0;
+	display: inline-block;
+	border: 1px solid #888888;
+	background-color: #dddddd;
+	padding: 2px 7px 2px 7px;
+	cursor: pointer;
+	z-index: 101;
+	color: #888888;
+}
+
+
