--- a/memory/css/CheckboxWindowManager.css
+++ b/memory/css/CheckboxWindowManager.css
@@ -1,7 +1,7 @@
 .CheckboxWindowManager {
-	position: fixed;
+	position: absolute;
 	top: 25px;
-	right: 0;
+	right: 10px;
 	padding: 0;
 	background-color: white;
 	border: 1px solid #888888;
