--- a/memory/css/memory.css
+++ b/memory/css/memory.css
@@ -29,7 +29,7 @@ body {
 
 .checkbox_open_close {
 	position: absolute;
-	left: 10px;
+	right: 10px;
 	top: 0;
 	display: inline-block;
 	border: 1px solid #888888;
