--- a/style/dc.scss
+++ b/style/dc.scss
@@ -14,12 +14,12 @@ $color_blue: #00f;
 $font_sans_serif: sans-serif;
 
 @mixin no-select {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 //original selectors
@@ -437,45 +437,45 @@ div div.dc-data-count {
 
 
 div.dc-html-legend {
-  overflow-y: auto;
-  overflow-x: hidden;
-  height: inherit;
-  float: right;
-  padding-right: 2px;
-  .dc-legend-item-horizontal {
-    display: inline-block;
-    margin-left: 5px;
-    margin-right: 5px;
-    cursor: pointer;
-      &.selected{
-          background-color: rgb(49, 130, 189);
-          color: white;
-      }
-  }
-  .dc-legend-item-vertical {
-    display: block;
-    margin-top: 5px;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    cursor: pointer;
-      &.selected{
-          background-color: rgb(49, 130, 189);
-          color: white;
-      }
-  }
-  .dc-legend-item-color {
-    display: table-cell;
-    width: 12px;
-    height: 12px;
-  }
-  .dc-legend-item-label {
-    line-height: 12px;
-    display: table-cell;
-    vertical-align: middle;
-    padding-left: 3px;
-    padding-right: 3px;
-    font-size: 0.75em;
-  }
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: inherit;
+    float: right;
+    padding-right: 2px;
+    .dc-legend-item-horizontal {
+        display: inline-block;
+        margin-left: 5px;
+        margin-right: 5px;
+        cursor: pointer;
+        &.selected{
+            background-color: rgb(49, 130, 189);
+            color: white;
+        }
+    }
+    .dc-legend-item-vertical {
+        display: block;
+        margin-top: 5px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        cursor: pointer;
+        &.selected{
+            background-color: rgb(49, 130, 189);
+            color: white;
+        }
+    }
+    .dc-legend-item-color {
+        display: table-cell;
+        width: 12px;
+        height: 12px;
+    }
+    .dc-legend-item-label {
+        line-height: 12px;
+        display: table-cell;
+        vertical-align: middle;
+        padding-left: 3px;
+        padding-right: 3px;
+        font-size: 0.75em;
+    }
 }
 
 .dc-html-legend-container{
@@ -483,44 +483,44 @@ div.dc-html-legend {
 }
 
 .myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #54a3f7;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #54a3f7;
-	box-shadow:inset 0px 1px 0px 0px #54a3f7;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007dc1), color-stop(1, #0061a7));
-	background:-moz-linear-gradient(top, #007dc1 5%, #0061a7 100%);
-	background:-webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
-	background:-o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
-	background:-ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
-	background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
-	background-color:#007dc1;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	border-radius:3px;
-	border:1px solid #124d77;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #154682;
+    -moz-box-shadow:inset 0px 1px 0px 0px #54a3f7;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #54a3f7;
+    box-shadow:inset 0px 1px 0px 0px #54a3f7;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007dc1), color-stop(1, #0061a7));
+    background:-moz-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:-webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:-o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:-ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+    background-color:#007dc1;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:1px solid #124d77;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #154682;
     margin: 0 7px 0 0;
 }
 .myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
-	background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
-	background-color:#0061a7;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
+    background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+    background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+    background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+    background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
+    background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
+    background-color:#0061a7;
 }
 .myButton:active {
-	position:relative;
-	top:1px;
+    position:relative;
+    top:1px;
 }
 
 #quarter-chart .pie-slice {
@@ -533,15 +533,15 @@ div.dc-html-legend {
 }
 
 body .container {
-  width: 1280px;
+    width: 1280px;
 }
 
 body .dc-chart g.row text {
-  fill: #000000;
+    fill: #000000;
 }
 
 .left_side {
-  margin: 0 26px 0 0;
+    margin: 0 26px 0 0;
     float: none;
     display: inline-block;
     vertical-align: top;
@@ -750,22 +750,36 @@ body .dc-chart g.row text {
         padding: 20px 0 0 0;
 
         table {
-          margin: 1px 0 0 0;
+            margin: 1px 0 0 0;
+        }
+
+        tr td:first-child {
+            width: 100px;
+
+            select {
+                width: 80px;
+            }
+        }
+
+        tr td:nth-child(2) select {
+            width: 360px;
         }
 
         tr:first-child td {
-          border-top: 1px solid #bbbbbb;
-          padding: 12px 3px 3px 3px;
+            border-top: 1px solid #bbbbbb;
+            padding: 12px 3px 3px 3px;
         }
 
-      .delete_row {
-        position: relative;
-        top: -4px;
-        font-size: 18px;
-        width: 22px;
-        padding: 6px;
-        text-align: center;
-      }
+
+
+        .delete_row {
+            position: relative;
+            top: -4px;
+            font-size: 18px;
+            width: 22px;
+            padding: 6px;
+            text-align: center;
+        }
     }
 
     &.edit_mode {
@@ -1043,94 +1057,94 @@ body .bg-color-255-255-255-0 {
 }
 
 .curtain {
-	width: 100%;
-	height: 100%;
-	background-color: #cccccc;
-	opacity: 0.65;
-	position:fixed;
-	left: 0;
-	top: 0;
-	z-index: 1500;
+    width: 100%;
+    height: 100%;
+    background-color: #cccccc;
+    opacity: 0.65;
+    position:fixed;
+    left: 0;
+    top: 0;
+    z-index: 1500;
 }
 
 .modal {
-	margin: auto auto;
-	background-color: white;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -60%);
-	border: 1px solid #000000;
-	-webkit-box-shadow: 3px 3px 3px #333333;
-	z-index: 1501;
+    margin: auto auto;
+    background-color: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    border: 1px solid #000000;
+    -webkit-box-shadow: 3px 3px 3px #333333;
+    z-index: 1501;
 }
 
 .modal .body {
-	padding: 30px;
-	min-width: 280px;
-	min-height: 180px;
+    padding: 30px;
+    min-width: 280px;
+    min-height: 180px;
     font-size: 15px;
 }
 
 .modal .close {
-	position: absolute;
-	top: 7px;
-	right: 7px;
+    position: absolute;
+    top: 7px;
+    right: 7px;
     opacity: 1;
 }
 
 .modal .close.black_button .inner_button {
-	padding: 4px 4px 4px 7px;
-	width: 16px;
+    padding: 4px 4px 4px 7px;
+    width: 16px;
     color: white;
     font-size: 22px;
 }
 
 .outer_modal {
-	width: 100%;
-	height: 100%;
-	text-align: left;
+    width: 100%;
+    height: 100%;
+    text-align: left;
 }
 
 .modal .button_bottom {
-	position: absolute;
-	bottom: 15px;
-	text-align: center;
-	width: 345px;
-	font-family: tahoma;
+    position: absolute;
+    bottom: 15px;
+    text-align: center;
+    width: 345px;
+    font-family: tahoma;
 }
 
 .header {
-	border-bottom: 1px solid #333;
-	background: #444 url(../img/ui-bg_highlight-soft_44_444444_1x100.png) 50% 50% repeat-x;
-	color: #fff;
-	font-weight: bold;
-	padding: 11px;
-	font-family: Tahoma;
-	font-size: 15px;
-	letter-spacing: 1pt;
-	-webkit-text-shadow: -1px -1px 0 #000000;
-	-moz-text-shadow: -1px -1px 0 #000000;
-	text-shadow: -1px -1px 0 #000000;
-	position: relative;
+    border-bottom: 1px solid #333;
+    background: #444 url(../img/ui-bg_highlight-soft_44_444444_1x100.png) 50% 50% repeat-x;
+    color: #fff;
+    font-weight: bold;
+    padding: 11px;
+    font-family: Tahoma;
+    font-size: 15px;
+    letter-spacing: 1pt;
+    -webkit-text-shadow: -1px -1px 0 #000000;
+    -moz-text-shadow: -1px -1px 0 #000000;
+    text-shadow: -1px -1px 0 #000000;
+    position: relative;
 }
 .header    .plus_sign {
-	width: 19px;
-	height: 19px;
-	position: absolute;
-	top: 7px;
-	right: 7px;
-	-webkit-filter: grayscale(1) invert(1);
-	filter: grayscale(1) invert(1);
-	background: url(../img/edit_pencil.png);
-	background-size: 100% 100%;
-	cursor: pointer;
+    width: 19px;
+    height: 19px;
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    -webkit-filter: grayscale(1) invert(1);
+    filter: grayscale(1) invert(1);
+    background: url(../img/edit_pencil.png);
+    background-size: 100% 100%;
+    cursor: pointer;
 }
 
 .header .plus_sign {
-	background: url(../img/plus.png);
-	background-size: 100% 100%;
-	right: 8px;
+    background: url(../img/plus.png);
+    background-size: 100% 100%;
+    right: 8px;
 }
 
 .spinner_loader {
@@ -1138,65 +1152,65 @@ body .bg-color-255-255-255-0 {
     position: fixed;
     top: 45%;
     left: 50%;
-  font-size: 10px;
-  margin: 50px auto;
-  text-indent: -9999em;
-  width: 11em;
-  height: 11em;
-  border-radius: 50%;
-  background: #bbbbbb;
-  background: -moz-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
-  background: -webkit-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
-  background: -o-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
-  background: -ms-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
-  background: linear-gradient(to right, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
-  -webkit-animation: load3 1.4s infinite linear;
-  animation: load3 1.4s infinite linear;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+    font-size: 10px;
+    margin: 50px auto;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: #bbbbbb;
+    background: -moz-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
+    background: -webkit-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
+    background: -o-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
+    background: -ms-linear-gradient(left, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
+    background: linear-gradient(to right, #bbbbbb 10%, rgba(255, 255, 255, 0) 42%);
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
 }
 .spinner_loader:before {
-  width: 50%;
-  height: 50%;
-  background: transparent;
-  border-radius: 100% 0 0 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
+    width: 50%;
+    height: 50%;
+    background: transparent;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
 }
 /* inner circle color */
 .spinner_loader:after {
-  background: white;
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
-  content: '';
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+    background: white;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: '';
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 @-webkit-keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 @keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
