refactor tr td select presentation to allow for alignment of CSS columns
Former-commit-id: 7ce9f736be4554c48b342be73e21cda190df735a

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -744,6 +744,26 @@ body .dc-chart g.row text {
 
 }
 
+
+table.only_multi_row_selector {
+
+    tr:nth-child(2) td {
+        padding: 0 0 0 0;
+    }
+
+    tr td:first-child {
+        width: 100px;
+
+        select {
+            width: 80px;
+        }
+    }
+
+    tr td:nth-child(2) select {
+        width: 360px;
+    }
+}
+
 .composite_chart_type {
 
     .multi_row_selector {
@@ -751,18 +771,6 @@ body .dc-chart g.row text {
 
         table {
             margin: 1px 0 0 0;
-        }
-
-        tr td:first-child {
-            width: 100px;
-
-            select {
-                width: 80px;
-            }
-        }
-
-        tr td:nth-child(2) select {
-            width: 360px;
         }
 
         tr:first-child td {
