support delete operation for barCharts which are composite layer charts since these are user generated they should be deletable
Former-commit-id: 033be20b57795915df7dd05ab0af9acf8a1d0984

--- a/style/dc.css
+++ b/style/dc.css
@@ -519,6 +519,8 @@ table.only_multi_row_selector tr td:nth-child(2) select {
 
 .composite_chart_type .multi_row_selector {
   padding: 20px 0 0 0; }
+  .composite_chart_type .multi_row_selector .input_const {
+    display: none; }
   .composite_chart_type .multi_row_selector table {
     margin: 1px 0 0 0; }
   .composite_chart_type .multi_row_selector tr:first-child td {
