added a new image for memory. as matt wanted, we now use a linegraph image instead of a memory circuit.  also update licenses document and attribution uses the same one as listed beore
Former-commit-id: fe9d64acb6b252159c53708aba3f267e3157299b

--- a/style/Whole.css
+++ b/style/Whole.css
@@ -301,7 +301,7 @@ table.dc-data-table .walltime {
 table.dc-data-table .memory {
   position: static; }
   table.dc-data-table .memory div {
-    background-image: url(../img/memory.png);
+    background-image: url(../img/graph.png);
     background-size: 100% 100%; }
 table.dc-data-table .jupyter.icon {
   position: static;
