--- a/style/dc.scss
+++ b/style/dc.scss
@@ -459,7 +459,7 @@ table.dc-data-table {
         position: static;
 
         div {
-            background-image: url(../img/memory.png);
+            background-image: url(../img/graph.png);
             background-size: 100% 100%;
         }
     }
