change walltime name to durations for the scss class
Former-commit-id: 7a14d5b39153096a46e4ffd7390dcde499229470

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -444,7 +444,7 @@ table.only_multi_row_selector {
 
 table.dc-data-table {
 
-    .walltime {
+    .durations {
 
         position: static;
 
@@ -454,7 +454,7 @@ table.dc-data-table {
         }
     }
 
-    .memory {
+    .timeseries {
 
         position: static;
 
